Remove old analyzer binaries
Replace them with README.md files, mostly so that git does not elide
the empty directories, since it's convenient if freshly built binaries
can be directly copied into the appropriate directory.

--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -11,5 +11,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Run tests
       run: |
+        curl https://images.aarno-labs.com/amp/chx86_analyze-0.6.0_20220208-linux -o chb/bin/binaries/linux/chx86_analyze
+        chmod +x chb/bin/binaries/linux/chx86_analyze
         PYTHONPATH=$PWD chb/cmdline/chkx test runall
 
