Add support for simple asm instructions
"Simple" meaning without input/output constraints, for now.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ chb/bin/binaries/*/chx86_analyze
 *.yaml~
 chkx~
 
+# Vim
+*.swp
+*.swo
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
